changed home to index and added support page

--- a/index.html
+++ b/index.html
@@ -7,28 +7,53 @@
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
+
     <header>
         <img src="./images/sprout-grow-horizontal-524.png" alt="logo" class="logo">
     <nav>
         <a href="about.html">About</a>
         <a href="products.html">Plants</a>
         <a href="events.html">Events</a>
-        <a href="index.html">Index</a>
+        <a href="support.html">Support</a>
     </nav>
     </header>
 
     <main>
-        <!-- Home page main content goes here: hero image, intro text, etc. -->
+        <img src="./images/plantnursery-unsplash.jpg" alt="plant nursery with flowers" class="image">
+        
+        <section class="intropara">
+            <h1> Who We Are </h1>
+           <p>
+            At Sprout & Grow, we believe that healthy gardens start with healthy roots—both in the soil and in our community. Nestled in the heart of Raleigh, NC, our greenhouse nursery is dedicated to growing high-quality organic plants that support sustainable and vibrant gardening practices. <br><br>
+            We’re more than just a nursery—we’re a place where passion for nature meets a commitment to excellence. Every plant we offer is carefully nurtured with organic methods, rooted in our core values of transparency, integrity, and environmental stewardship. Whether you’re a seasoned gardener or just starting out, our knowledgeable team is here to guide and empower you through personalized support and a wealth of educational resources.
+           </p>
+        </section>
+
+        <section class="explore-section">
+         <div class="pair">
+            <a href="products.html"> <h1>EXPLORE</h1></a>
+            <p>our large selection of plants available to purchase!</p>
+         </div>
+         <div class="pair">
+            <a href="index.html"><h1>LEARN</h1></a>
+            <p>about the environment with our blog!</p>
+         </div>
+         <div class="pair">
+            <a href="products.html"><h1>GROW</h1></a>
+            <p>alongside our budding community with our events!</p>
+         </div>
+        </section>
+
     </main>
-    
+
     <footer>
         <section class="footnav">
          <div class="footlink">
-            <a href="home.html">Home</a> <br>
+            <a href="index.html">Home</a> <br>
             <a href="about.html">About</a> <br>
             <a href="products.html">Plants</a> <br>
             <a href="events.html">Events</a> <br>
-            <a href="index.html">Index</a> <br>
+            <a href="support.html">Support</a> <br>
         </div>
         <div class="footlocate"><h2>
             Location </h2><br>
