--- a/products.html
+++ b/products.html
@@ -13,7 +13,7 @@
         <a href="about.html">About</a>
         <a href="products.html">Plants</a>
         <a href="events.html">Events</a>
-        <a href="index.html">Index</a>
+        <a href="support.html">Support</a>
     </nav>
     </header>
 
@@ -57,11 +57,11 @@
     <footer>
         <section class="footnav">
          <div class="footlink">
-            <a href="home.html">Home</a> <br>
+            <a href="index.html">Home</a> <br>
             <a href="about.html">About</a> <br>
             <a href="products.html">Plants</a> <br>
             <a href="events.html">Events</a> <br>
-            <a href="index.html">Index</a> <br>
+            <a href="support.html">Support</a> <br>
         </div>
         <div class="footlocate"><h2>
             Location </h2><br>
