--- a/support.html
+++ b/support.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
-    <link rel="stylesheet" href="css/events.css">
+    <link rel="stylesheet" href="css/support.css">
 </head>
 <body>
     <header>
@@ -18,7 +18,7 @@
     </header>
 
     <main>
-        <img src="./images/events.jpg" alt="adult teaching child about plants" class="image">
+        <!-- Home page main content goes here: hero image, intro text, etc. -->
     </main>
     
     <footer>
