finished register page

--- a/events.html
+++ b/events.html
@@ -13,12 +13,42 @@
         <a href="about.html">About</a>
         <a href="products.html">Plants</a>
         <a href="events.html">Events</a>
-        <a href="support.html">Support</a>
+        <a href="support.html">Register</a>
     </nav>
     </header>
 
     <main>
         <img src="./images/events.jpg" alt="adult teaching child about plants" class="image">
+    
+    <section class="events-header">
+        <h2>
+            From curated classes to interactive tours, there's something for everyone to enjoy!
+        </h2>
+        <h1>
+            Upcoming Events
+        </h1>
+    </section>
+
+    <section class="events">
+        <h1>Organic Gardening 101: Beginner’s Class
+        </h1>
+        <h2>Learn the Basics of Sustainable Gardening</h2>
+        <h3> Every Saturday | 10:00 AM</h3>
+        <p>Whether you’re brand new to gardening or switching to organic methods, this hands-on class covers soil health, composting, natural pest control, and more. Leave with your own starter herb and a detailed resource guide.</p>
+<br>
+        <h1>Greenhouse Tours: Behind the Roots
+        </h1>
+        <h2>Discover the Heart of Sprout & Grow</h2>
+        <h3> First Sunday of each month | 11:00 AM & 2:00 PM</h3>
+        <p>Take a guided tour of our working greenhouse nursery. Learn how our plants are nurtured from seed to shelf, and get an inside look at our sustainable growing practices.</p>
+<br>
+        <h1>Kids in the Garden: Family Day at the Nursery
+        </h1>
+        <h2>Hands-On Learning for Young Gardeners</h2>
+        <h3> Saturday, May 17, 2025 | 10:30 AM</h3>
+        <p>Join us for a family-friendly morning of planting, storytelling, and pollinator discovery. Each child leaves with a plant they’ve potted themselves!</p>
+    </section>
+
     </main>
     
     <footer>
@@ -28,7 +58,7 @@
             <a href="about.html">About</a> <br>
             <a href="products.html">Plants</a> <br>
             <a href="events.html">Events</a> <br>
-            <a href="support.html">Support</a> <br>
+            <a href="support.html">Register</a> <br>
         </div>
         <div class="footlocate"><h2>
             Location </h2><br>
