--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
         <a href="about.html">About</a>
         <a href="products.html">Plants</a>
         <a href="events.html">Events</a>
-        <a href="support.html">Support</a>
+        <a href="support.html">Register</a>
     </nav>
     </header>
 
@@ -34,10 +34,6 @@
                 </p>                
         </section>
 
-        <section class="staff">
-            <h1>Meet Our Staff</h1>
-        </section>
-
     </main>
 
     <footer>
@@ -47,7 +43,7 @@
             <a href="about.html">About</a> <br>
             <a href="products.html">Plants</a> <br>
             <a href="events.html">Events</a> <br>
-            <a href="support.html">Support</a> <br>
+            <a href="support.html">Register</a> <br>
         </div>
         <div class="footlocate"><h2>
             Location </h2><br>
