--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a href="about.html">About</a>
         <a href="products.html">Plants</a>
         <a href="events.html">Events</a>
-        <a href="support.html">Support</a>
+        <a href="support.html">Register</a>
     </nav>
     </header>
 
@@ -53,7 +53,7 @@
             <a href="about.html">About</a> <br>
             <a href="products.html">Plants</a> <br>
             <a href="events.html">Events</a> <br>
-            <a href="support.html">Support</a> <br>
+            <a href="support.html">Register</a> <br>
         </div>
         <div class="footlocate"><h2>
             Location </h2><br>
