--- a/support.html
+++ b/support.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>register</title>
     <link rel="stylesheet" href="css/support.css">
 </head>
 <body>
@@ -57,6 +57,7 @@
             <img src="./images/facebook-new.png" alt="insta" class="socials">
             <img src="./images/Twitter-X-Logo.png" alt="twitter" class="socials"> <br>
             <h2>
+                <p>© 2025 Sprout & Grow. All rights reserved.</p>
         </div>
     </section>
     </footer>
